--- a/index.ipynb
+++ b/index.ipynb
@@ -395,13 +395,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = None"
+    "unique_countries = list(set(countries))"
    ]
   },
   {
